--- a/assets/css/widgets.css
+++ b/assets/css/widgets.css
@@ -16,7 +16,7 @@
   max-height: 240px;
 }
 .widget-top h2 {
-  color: var(--f-primary);
+  color: var(--color-1);
   font-size: 1.5rem;
   text-transform: capitalize;
   font-family: var(--font-2);
